--- a/lang/en.json
+++ b/lang/en.json
@@ -5,6 +5,7 @@
     "YOUR-TURN.SomethingHappens": "Something is happening...",
     "YOUR-TURN.YourTurn": "It's your Turn",
     "YOUR-TURN.Setting-TokenImage": "Use the actors token image instead",
-    "YOUR-TURN.Setting-UseFixedNpcColor": "Use fixed banner color for NPCs",
-    "YOUR-TURN.Setting-FixedNpcColor": "NPC banner color"
+    "YOUR-TURN.Setting-UseFixedNpcColor": "Use fixed banner color for NPCs turn",
+    "YOUR-TURN.Setting-FixedNpcColor": "NPC turn banner color",
+    "YOUR-TURN.Setting-ScaleImageToSize": "Scale image depending on actor size"
 }
